Fixed navigation, reviews and faq layout issues

--- a/css/main.css
+++ b/css/main.css
@@ -125,13 +125,15 @@ textarea {
      justify-content: space-around;
      align-items: center;
      flex-flow: row wrap;
-     width: 60%;
+     width: 50%;
    }
 
    header nav ul {
      display: flex;
      justify-content: space-between;
-     width: 100%;
+     width: 45%;
+     padding: 0;
+
    }
 
    footer {
@@ -199,16 +201,16 @@ aside {
   margin-bottom: 60px;
 }
 
+.features article {
+  width: 63%;
+  margin: 30px 0;
+}
+
 .features .features-items {
   display: flex;
   justify-content: center;
   align-items: center;
   flex-flow: row wrap;
-}
-
-.features article {
-  width: 60%;
-  margin: 30px 0;
 }
 
 .features p {
@@ -420,7 +422,7 @@ aside {
     margin: 50px 0;
     display: flex;
     justify-content: space-between;
-    flex-flow: nowrap;
+    flex-flow: row wrap;
   }
 
   aside .content-wrapper .form-description,
@@ -440,7 +442,7 @@ aside {
   }
 
   .features .features-item-description {
-    width: 50%;
+    width: 60%;
   }
 
   /* Reviews */
@@ -506,7 +508,7 @@ aside {
     justify-content: space-between;
   }
 
-  .faq-content {
+  .faq-item {
     flex-basis: 45%;
   }
 
